--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -21,3 +21,10 @@
 .myform{
     outline: none !important;
 }
+
+.footer{
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
