--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -5,6 +5,16 @@
 
 .search_input{
     width: 80%;
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    height: 100%;
+    padding: 5px;
+    transition: 1s ease-in-out;
+}
+
+.search_animate{
+    left: 0%;
 }
 
 .search_btn{
@@ -12,4 +22,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    height: 100%;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.search_btn:hover{
+    background-color: black;
+    color: white;
+    cursor: pointer;
 }
