--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -11,6 +11,7 @@
     height: 100%;
     padding: 5px;
     transition: 1s ease-in-out;
+    border-radius: 5px;
 }
 
 .search_animate{
@@ -28,6 +29,7 @@
     height: 100%;
     border: 1px solid black;
     background-color: white;
+    border-radius: 5px;
 }
 
 .search_btn:hover{
