--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -2,7 +2,7 @@
     height: 75px;
     width: 100%;
     display: flex;
-    background-color: black;
+    background-color: #121212;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
@@ -11,7 +11,7 @@
 }
 
 .nav_logo a{
-    color: whitesmoke;
+    color: white;
     font-weight: 400;
     font-style: italic;
     text-decoration: none;
@@ -45,12 +45,12 @@
     text-decoration: none;
     font-weight: 500;
     padding: 7px;
-    color: whitesmoke;
+    color: white;
 }
 
 .list a.active{
-    border-top: 1px solid whitesmoke;
-    border-bottom: 1px solid whitesmoke;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 .nav_link{
@@ -59,7 +59,7 @@
 }
 
 .logout{
-    color: whitesmoke;
+    color: white;
 }
 
 .logout:hover{
@@ -90,7 +90,7 @@
         /* top: 75px; */
         height: 100vh;
         width: 100%;
-        background: black;
+        background: #121212;
         z-index: 99;
         position: fixed;
         top: -100%;
@@ -118,7 +118,7 @@
 
 }
 
-.list.active{
+.list.activeList{
     top: 75px;
 }
 
