--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -15,6 +15,7 @@
     font-weight: 400;
     font-style: italic;
     text-decoration: none;
+    font-family: 'Brush Script MT', cursive;
 }
 
 .pdf{
@@ -100,7 +101,7 @@
         justify-content: flex-start;
         padding: 30px 0px 0px 0px;
         transition: 0.3s ease-in-out;
-        
+        overflow: scroll;
     }
 
     .list li{
