--- a/client/src/css/Modal.css
+++ b/client/src/css/Modal.css
@@ -8,6 +8,11 @@
     flex-direction: column;
     align-items: center;
     transition: 0.75s ease-in-out;
+	overflow-y: scroll;
+}
+
+.modal_menu::-webkit-scrollbar{
+	display: none;
 }
 
 .modal_menubtn{
