custom button component

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -11,7 +11,9 @@
 
 .mybtn{
     width : 100px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .myform:focus{
