added sorting for oldest newest files

--- a/client/src/css/Files.css
+++ b/client/src/css/Files.css
@@ -18,6 +18,9 @@
         top : 89%;
         width: 200px;
     }
+    .inner_files{
+        height: 60vh;
+    }
 }
 
 .inner_files::-webkit-scrollbar{
