--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -48,3 +48,29 @@
 .label{
     margin-bottom: 5px;
 }
+
+/* spinner */
+
+.spin_div{
+    animation: spin 0.5s ease infinite; 
+    height: 150px;
+    width: 150px;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+     25%{
+        transform: rotate(90deg);
+    }
+     50%{
+        transform: rotate(180deg);
+    }
+    75%{
+        transform: rotate(270deg); 
+    }
+     100%{
+        transform: rotate(360deg);
+    }
+}
