--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -6,7 +6,7 @@
     height: 75px;
     width: 100%;
     display: flex;
-    background-color: #14141A;
+    background-color: #121212;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
