added icon replacing text in button & made changes

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -10,10 +10,11 @@
 }
 
 .mybtn{
-    width : 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 8px;
+    margin: 0px 2px;
 }
 
 .myform:focus{
